# handbook-agent

./: .env.template  .gitignore  README.md  main.py  mlflow.db  pyproject.toml
chroma_db/600441c3-1b3e-456c-a906-809186917747/: index_metadata.pickle
crawl/: crawler.py
data/: corpus.json
embed/: embeder.py
evaluation/: graph_structure.yaml  main.py
evaluation/data/graph/inputs/: nodes.yaml
evaluation/data/graph/outputs/: eval_classify.csv  eval_grade.csv  eval_retrieve.csv  eval_routing.csv
evaluation/data/lash/inputs/: lash_suites.yaml
evaluation/graph/: graph_eval.py  graph_structure_eval.py  nodes.py
evaluation/lash/: lash_evaluate.py  lash_metrics.py  lash_suites.py
grader/: grade.py
src/: main.py
src/agent/: agent.py
src/api/: app.py
src/ui/: app.js  index.html
static/: app.js  style.css
