[project]
name = "rag-agilelab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.1.0",
    "chromadb>=1.5.1",
    "dotenv>=0.9.9",
    "fastapi>=0.133.0",
    "fasttext-langdetect>=1.0.5",
    "isort>=8.0.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "langdetect>=1.0.9",
    "langgraph>=1.0.9",
    "lxml>=6.0.2",
    "mlflow>=3.0.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "tavily-python>=0.7.21",
    "uvicorn>=0.41.0",
]
